--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>academy-web-oasis</title>
-    <meta name="description" content="Extensive Academy" />
+    <title>Extensive Academy</title>
+    <meta name="description" content="Extensive Academy is a premier learning institution dedicated to inspiring excellence in students through quality education and innovative learning experiences." />
     <meta name="author" content="Lovable" />
+    <meta name="keywords" content="Extensive Academy, education, learning, school, Nigeria, excellence" />
 
-    <meta property="og:title" content="academy-web-oasis" />
-    <meta property="og:description" content="Extensive Academy" />
+    <!-- Open Graph -->
+    <meta property="og:title" content="Extensive Academy" />
+    <meta property="og:description" content="Extensive Academy is a premier learning institution..." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="public/lovable-uploads/ab.jpg"/>
+    <meta property="og:image" content="https://academy-web-oasis.vercel.app/lovable-uploads/ab.jpg" />
 
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="public/lovable-uploads/ab.jpg" />
-  </head>
+    <meta name="twitter:image" content="https://academy-web-oasis.vercel.app/lovable-uploads/ab.jpg" />
 
+    <link rel="icon" href="/favicon.ico" />
+  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
