Initial project commit

--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:site" content="" />
     <meta name="twitter:image" content="https://academy-web-oasis.vercel.app/lovable-uploads/ab.jpg" />
+
+    <meta property="og:title" content="Extensive Academy" />
+<meta property="og:description" content="Extensive Academy is a premier learning institution...." />
+  <meta property="og:image" content="https://academy-web-oasis.vercel.app/lovable-uploads/ab.jpg" />
+<meta property="og:url" content="https://www.facebook.com/share/1EvhLqej2n/" />
+<meta property="og:type" content="website" />
+<meta property="og:site_name" content="Academy-web-oasis" />
 
     <link rel="icon" href="/favicon.ico" />
   </head>
