Initial project commit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Open Graph -->
     <meta property="og:title" content="Extensive Academy" />
-    <meta property="og:description" content="Extensive Academy is a premier learning institution..." />
+    <meta property="og:description" content="Extensive Academy is a premier learning institution dedicated to inspiring excellence in students through quality education and innovative learning experiences." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://academy-web-oasis.vercel.app/lovable-uploads/ab.jpg" />
 
@@ -19,14 +19,11 @@
     <meta name="twitter:site" content="" />
     <meta name="twitter:image" content="https://academy-web-oasis.vercel.app/lovable-uploads/ab.jpg" />
 
-    <meta property="og:title" content="Extensive Academy" />
-<meta property="og:description" content="Extensive Academy is a premier learning institution...." />
-  <meta property="og:image" content="https://academy-web-oasis.vercel.app/lovable-uploads/ab.jpg" />
-<meta property="og:url" content="https://www.facebook.com/share/1EvhLqej2n/" />
-<meta property="og:type" content="website" />
-<meta property="og:site_name" content="Academy-web-oasis" />
 
-    <link rel="icon" href="/favicon.ico" />
+<meta property="og:url" content="https://academy-web-oasis.vercel.app/" />
+<meta property="og:site_name" content="Extensive Academy" />
+
+  <link rel="icon" type="image/png" href="https://academy-web-oasis.vercel.app/lovable-uploads/97f18681-df52-4541-94d7-c7f23019c06d.png" />
   </head>
   <body>
     <div id="root"></div>
