Initial project commit

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Extensive Academy</title>
     <meta name="description" content="Extensive Academy is a premier learning institution dedicated to inspiring excellence in students through quality education and innovative learning experiences." />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Code-Max" />
     <meta name="keywords" content="Extensive Academy, education, learning, school, Nigeria, excellence" />
 
     <!-- Open Graph -->
