--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <meta property="og:title" content="Extensive Academy" />
     <meta property="og:description" content="Extensive Academy is a premier learning institution dedicated to inspiring excellence in students through quality education and innovative learning experiences." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://academy-web-oasis.vercel.app/lovable-uploads/ab.jpg" />
+    <meta property="og:image" content="https://www.extensiveacademy.org//lovable-uploads/ab.jpg" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="" />
-    <meta name="twitter:image" content="https://academy-web-oasis.vercel.app/lovable-uploads/ab.jpg" />
+    <meta name="twitter:image" content="https://www.extensiveacademy.org//lovable-uploads/ab.jpg" />
 
 
-<meta property="og:url" content="https://academy-web-oasis.vercel.app/" />
+<meta property="og:url" content="https://www.extensiveacademy.org/" />
 <meta property="og:site_name" content="Extensive Academy" />
 
-  <link rel="icon" type="image/png" href="https://academy-web-oasis.vercel.app/lovable-uploads/97f18681-df52-4541-94d7-c7f23019c06d.png" />
+  <link rel="icon" type="image/png" href="https://ww.extensiveacademy.org//lovable-uploads/97f18681-df52-4541-94d7-c7f23019c06d.png" />
   </head>
   <body>
     <div id="root"></div>
