--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <meta property="og:site_name" content="Extensive Academy" />
 <link rel="canonical" href="https://www.extensiveacademy.org/" />
 
-  <link rel="icon" type="image/png" href="https://ww.extensiveacademy.org/lovable-uploads/97f18681-df52-4541-94d7-c7f23019c06d.png" />
+  <link rel="icon" type="image/png" href="https://www.extensiveacademy.org/lovable-uploads/97f18681-df52-4541-94d7-c7f23019c06d.png" />
   </head>
   <body>
     <div id="root"></div>
