--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Extensive Academy" />
     <meta property="og:description" content="Extensive Academy is a premier learning institution dedicated to inspiring excellence in students through quality education and innovative learning experiences." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://www.extensiveacademy.org/lovable-uploads/97f18681-df52-4541-94d7-c7f23019c06d.png" />
+    <meta property="og:image" content="https://www.extensiveacademy.org/lovable-uploads/ab.jpg" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
